@@ -87,7 +87,7 @@ Wireless deauthentication support
 -----------------------------|----------|----------|----------|
 AeroHIVE AP                  |    XX    |    --    |    --    |
 -----------------------------|----------|----------|----------|
-Aruba                        |    XX    |    --    |    --    |
+Aruba                        |    XX    |    --    |    XX    |
 -----------------------------|----------|----------|----------|
 Avaya WC                     |    --    |    XX    |    --    |
 -----------------------------|----------|----------|----------|
